--- a/wellness.html
+++ b/wellness.html
@@ -23,7 +23,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container nav-wrap">
-      <a class="brand" href="index.html">yoga with lisa</a>     
+      <a class="brand" href="index.html">yoga with lisa</a>
       <nav class="main-nav" aria-label="Primary">
         <ul>
           <li><a href="login.html" class="login-btn">LOGIN</a></li>
@@ -32,29 +32,29 @@
     </div>
   </header>
 
-<!-- Hero (image) -->
-<section class="hero hero--image" role="banner" aria-label="Wellness Hero">
-  <!-- Use the class names your CSS already styles -->
-  <div class="media" style="background-image:url('images/wellness-hero.jpg');" aria-hidden="true"></div>
-  <div class="overlay" aria-hidden="true"></div>
+  <!-- Hero (image) -->
+  <section class="hero hero--image" role="banner" aria-label="Hero">
+    <!-- Set your image at images/wellness-hero.jpg -->
+    <div class="hero-media" style="background-image:url('images/wellness-hero.jpg');" aria-hidden="true"></div>
+    <div class="hero-overlay" aria-hidden="true"></div>
 
-  <div class="hero-inner">
-    <h1 class="display">
-      <span class="nowrap">Wellness <em>with</em> Lisa.</span><br />
-      Lustre, <em>Lean, &</em> Legacy.
-    </h1>
-    <div class="hero-ctas">
-      <a class="btn btn-dark btn-pill" href="login.html">EXPLORE TODAY</a>
+    <div class="hero-inner">
+      <h1 class="display">
+        <span class="nowrap">Wellness <em>with</em> Lisa.</span><br/>
+        We're in this <em>together.</em> 
+      </h1>
+  <div class="hero-ctas">
+        <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>Practice self-care holistically ✨</h2>
+    <h2>Self-care never felt so good ✨</h2>
     <p>
-From glowing skin to add lustre to life or nourishing meals to keep you lean to becoming financially free and building the legacy you have always dreamed of, our wellness corner is here to support the whole you. Explore self-care rituals, quick healthy recipes, and money mindset tips designed to help you shine, thrive, and invest in your future.    
-</p>
+From glowing skin to nourishing meals to becoming financially free, our wellness corner is here to support you every step of the way. Explore self-care rituals, quick healthy recipes, and money mindset tips designed to help you shine, thrive, and invest in your future. 
+    </p>
   </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
@@ -91,7 +91,7 @@ From glowing skin to add lustre to life or nourishing meals to keep you lean to 
 
 <section class="container" style="padding: 80px 0;">
   <h2 style="text-align:center; font-family:'Playfair Display', serif; font-size:2.2rem; margin-bottom:40px;">
-    Lustre • Lean • Legacy
+    You've got this. 
   </h2>
 
   <div class="wellness-row" tabindex="0">
@@ -174,6 +174,12 @@ From glowing skin to add lustre to life or nourishing meals to keep you lean to 
     </article>
 </div>
 </section>
+
+<footer class="site-footer">
+    <div class="container">
+      <p>© <span id="y"></span> YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC. / ALL RIGHTS RESERVED</p>
+    </div>
+  </footer>
 
 </body>
 </html>
