Updates to yoga classes carousel

--- a/wellness.html
+++ b/wellness.html
@@ -89,6 +89,7 @@ From glowing skin to nourishing meals to becoming financially free, our wellness
   })();
 </script>
 
+<!-- =================== Wellness Feature Carousel =================== -->
 <section class="container" style="padding: 80px 0;">
   <h2 style="text-align:center; font-family:'Playfair Display', serif; font-size:2.2rem; margin-bottom:40px;">
     You've got this. 
@@ -139,11 +140,11 @@ From glowing skin to nourishing meals to becoming financially free, our wellness
   </div>
 </section>
 
-<!-- =================== Feature Carousel =================== -->
+<!-- =================== Pop-Up Feature Carousel =================== -->
 <section class="cards container" aria-label="Featured links">
   <h2 class="visually-hidden">Explore</h2>
 <div class="in-person-classes-head">
-    <h2>Join us for our in-person yoga pop-up classes! Virtual links are available.</h2>
+    <h2>Join us!</h2>
     <p class="sub">Each pop-up class is a chance to recharge, sweat, and share space with a supportive community. Show up as you are—every practice is beginner-friendly and a ton of fun!</p>
   </div>
 
