--- a/yoga.html
+++ b/yoga.html
@@ -89,60 +89,57 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
   })();
 </script>
 
-<!-- =================== Lift / Lull / Level Up (Carousel) =================== -->
+<!-- =================== Yoga Workout Classes Feature Carousel =================== -->
 <section class="container" style="padding: 80px 0;">
   <h2 style="text-align:center; font-family:'Playfair Display', serif; font-size:2.2rem; margin-bottom:40px;">
-    Find your perfect workout ✨
+    You've got this.
   </h2>
 
-  <!-- horizontally scrollable row -->
-  <div class="cards-row yoga-cards" tabindex="0"
-       style="
-         display:flex; gap:24px; overflow-x:auto; scroll-snap-type:x mandatory;
-         -webkit-overflow-scrolling: touch; padding: 2px 2px 12px;
-       ">
-
+  <div class="wellness-row" tabindex="0">
     <!-- Lift -->
-    <article class="theme-card"
-             style="flex:0 0 clamp(260px, 32vw, 360px); scroll-snap-align:start; text-align:center;">
-      <img src="images/lift.jpg" alt="Lift Yoga"
-           style="width:100%; border-radius:16px; margin-bottom:16px;">
-      <h3 style="font-family:'Playfair Display', serif; margin:12px 0;">Lift</h3>
-      <p style="font-size:0.95rem; color:#444; margin-bottom:16px;">
-        Energize your body with sculpt, yogalates, HIIT, and strength-based flows
-        designed to leave you feeling strong, focused, and ready to take on your day.
-      </p>
-      <a href="lift.html" class="btn btn-pill btn-dark">Lift, Tone, and Burn</a>
+    <article class="wellness-card">
+      <a class="poster" href="lift.html">
+        <img src="images/lift.jpg" alt="Lift">
+      </a>
+      <div class="meta">
+        <h3>Lift</h3>
+        <p>Energize your body with sculpt, pilates-infused, and strength-based flows
+        designed to leave you feeling strong, focused, and ready to take on your day.</p>
+        <a href="lift.html"
+           class="btn btn-pill btn-dark">Lift, tone, & sculpt</a>
+      </div>
     </article>
 
     <!-- Lull -->
-    <article class="theme-card"
-             style="flex:0 0 clamp(260px, 32vw, 360px); scroll-snap-align:start; text-align:center;">
-      <img src="images/lull.jpg" alt="Lull Yoga"
-           style="width:100%; border-radius:16px; margin-bottom:16px;">
-      <h3 style="font-family:'Playfair Display', serif; margin:12px 0;">Lull</h3>
-      <p style="font-size:0.95rem; color:#444; margin-bottom:16px;">
-        Slow down and reset with restorative flows, yin practices, and meditations
-        to calm your nervous system and bring peace to your mind and body.
-      </p>
-      <a href="lull.html" class="btn btn-pill btn-dark">Lull Your Nervous System</a>
+    <article class="wellness-card">
+      <a class="poster" href="lull.html">
+        <img src="images/lull.jpg" alt="Lull">
+      </a>
+      <div class="meta">
+        <h3>Lull</h3>
+        <p>Slow down and reset with restorative flows, yin practices, and meditations
+        to calm your nervous system and bring peace to your mind and body.</p>
+        <a href="lull.html"
+           class="btn btn-pill btn-dark">Regulate your nervous system</a>
+      </div>
     </article>
 
     <!-- Level-Up -->
-    <article class="theme-card"
-             style="flex:0 0 clamp(260px, 32vw, 360px); scroll-snap-align:start; text-align:center;">
-      <img src="images/levelup.jpg" alt="Level Up Yoga"
-           style="width:100%; border-radius:16px; margin-bottom:16px;">
-      <h3 style="font-family:'Playfair Display', serif; margin:12px 0;">Level-Up</h3>
-      <p style="font-size:0.95rem; color:#444; margin-bottom:16px;">
-        Glow from the inside out with cardio-based workouts like jump rope and kickboxing
-        to complement your practice and keep you strong, agile, & toned.
-      </p>
-      <a href="levelup.html" class="btn btn-pill btn-dark">Level-Up Your Practice</a>
+    <article class="wellness-card">
+      <a class="poster" href="levelup">
+        <img src="images/levelup.jpg" alt="Level Up">
+      </a>
+      <div class="meta">
+        <h3>Level-Up</h3>
+        <p>Glow from the inside out with cardio-based workouts like running, cycling, jump rope, and kickboxing
+        to complement your practice and strength-building exercises.</p>
+        <a href="levelup.html"
+           class="btn btn-pill btn-dark">Level Up Your Practice</a>
+      </div>
     </article>
-
   </div>
 </section>
+
 
 <!-- =================== Feature Carousel =================== -->
 <section class="cards container" aria-label="Featured links">
