Updates to photos across site

--- a/yoga.html
+++ b/yoga.html
@@ -120,7 +120,7 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
         <p>Slow down and reset with restorative flows, yin practices, and meditations
         to calm your nervous system and bring peace to your mind and body.</p>
         <a href="lull.html"
-           class="btn btn-pill btn-dark">Regulate your nervous system</a>
+           class="btn btn-pill btn-dark">Nervous system regulation</a>
       </div>
     </article>
 
