--- a/yoga.html
+++ b/yoga.html
@@ -145,7 +145,9 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
 <section class="cards container" aria-label="Featured links">
   <h2 class="visually-hidden">Explore</h2>
 <div class="in-person-classes-head">
-    <h2>Meet me on the mat!</h2>
+     <h2 style="text-align:center; font-family:'Playfair Display', serif; font-size:2.2rem; margin-bottom:40px;">
+    You've got this.
+  </h2>
     <p class="sub">From sunny vinyasa flows to grounding yin resets, our in-person pop-ups are designed to lift your body and your mood. Bring a friend, find your flow, and leave glowing.  
 </p>
   </div>
