--- a/wellness.html
+++ b/wellness.html
@@ -92,7 +92,7 @@ From glowing skin to nourishing meals to becoming financially free, our wellness
 <!-- =================== Wellness Feature Carousel =================== -->
 <section class="container" style="padding: 80px 0;">
   <h2 style="text-align:center; font-family:'Playfair Display', serif; font-size:2.2rem; margin-bottom:40px;">
-    You've got this. 
+    Your glow-up awaits ✨.  
   </h2>
 
   <div class="wellness-row" tabindex="0">
