--- a/yoga.html
+++ b/yoga.html
@@ -92,7 +92,7 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
 <!-- =================== Yoga Workout Classes Feature Carousel =================== -->
 <section class="container" style="padding: 80px 0;">
   <h2 style="text-align:center; font-family:'Playfair Display', serif; font-size:2.2rem; margin-bottom:40px;">
-    You've got this.
+    Your practice, your way.
   </h2>
 
   <div class="wellness-row" tabindex="0">
@@ -146,7 +146,7 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
   <h2 class="visually-hidden">Explore</h2>
 <div class="in-person-classes-head">
      <h2 style="text-align:center; font-family:'Playfair Display', serif; font-size:2.2rem; margin-bottom:40px;">
-    You've got this.
+    Join us in person!
   </h2>
     <p class="sub">From sunny vinyasa flows to grounding yin resets, our in-person pop-ups are designed to lift your body and your mood. Bring a friend, find your flow, and leave glowing.  
 </p>
