Update join us text across site

--- a/wellness.html
+++ b/wellness.html
@@ -144,7 +144,7 @@ From glowing skin to nourishing meals to becoming financially free, our wellness
 <section class="cards container" aria-label="Featured links">
   <h2 class="visually-hidden">Explore</h2>
 <div class="in-person-classes-head">
-    <h2>Join us!</h2>
+    <h2>Join us for a live class</h2>
     <p class="sub">Each pop-up class is a chance to recharge, sweat, and share space with a supportive community. Show up as you are—every practice is beginner-friendly and a ton of fun!</p>
   </div>
 
