Update login payment links

--- a/login.html
+++ b/login.html
@@ -77,21 +77,14 @@
             <p class="lead">Log in to access member content, your class library, and your billing portal.</p>
 	<div class="plan-stack">
 
-<!-- Monthly (price) -->
-<button type="button"
-  class="btn btn-pill btn-dark btn-wide"
-  data-ms-modal="signup"
-  data-ms-price:add="prc_premium-monthly-plan-cklp04n5">
-  SUBSCRIBE NOW | MONTHLY PLAN FOR $16.99
-</button>
+<a class="btn btn-pill btn-dark btn-wide" 
+   href="https://buy.stripe.com/bJefZi3fB4ICalL1de2Ji00">Subscribe Now | Monthly Plan – $16.99/mo</a>
 
-<!-- Annual (price) -->
-<button type="button"
-  class="btn btn-pill btn-dark btn-wide"
-  data-ms-modal="signup"
-  data-ms-price:add="prc_premium-annual--felk04yk">
-  SUBSCRIBE NOW | ANNUAL PLAN FOR $169.99
-</button>
+<a class="btn btn-pill btn-dark btn-wide" 
+   href="https://buy.stripe.com/9B6cN65nJ0smeC1aNO2Ji01">Subscribe Now | Annual Plan – $169.99/year</a>
+
+<a class="btn btn-outline btn-wide" 
+   href="https://billing.stripe.com/p/login/bJefZi3fB4ICalL1de2Ji00">Manage My Subscription</a>
 
   	<p class="plan-note">
     	Change or cancel anytime. Practice, breathe, give back—1.5% of proceeds go to permanent carbon removal thanks to
