Update login payment link buttons

--- a/login.html
+++ b/login.html
@@ -83,7 +83,7 @@
 <a class="btn btn-pill btn-dark btn-wide" 
    href="https://buy.stripe.com/9B6cN65nJ0smeC1aNO2Ji01">Subscribe Now | Annual Plan – $169.99/year</a>
 
-<a class="btn btn-outline btn-wide" 
+<a class="btn btn-pill btn-dark btn-wide" 
    href="https://billing.stripe.com/p/login/bJefZi3fB4ICalL1de2Ji00">Manage My Subscription</a>
 
   	<p class="plan-note">
