Bitcoin Lightning Link

--- a/login.html
+++ b/login.html
@@ -83,6 +83,10 @@
 <a class="btn btn-pill btn-dark btn-wide" 
    href="https://buy.stripe.com/9B6cN65nJ0smeC1aNO2Ji01">Subscribe Now | Annual Plan – $169.99/year</a>
 
+<!-- Lightning / Sats (choose one of these) -->
+<a class="btn btn-pill btn-dark btn-wide"
+   href="lightning:minutespy352@walletofsatoshi.com">Subscribe with Sats</a>
+
 <a class="btn btn-pill btn-dark btn-wide" 
    href="https://billing.stripe.com/p/login/bJefZi3fB4ICalL1de2Ji00">Manage My Subscription</a>
 
