--- a/login.html
+++ b/login.html
@@ -85,7 +85,11 @@
 
 <!-- Lightning / Sats (choose one of these) -->
 <a class="btn btn-pill btn-dark btn-wide"
-   href="lightning:minutespy352@walletofsatoshi.com">Subscribe with Sats</a>
+   href="lightning:minutespy352@walletofsatoshi.com">Subscribe with Bitcoin</a>
+
+<!-- Lightning / Sats (choose one of these) -->
+<a class="btn btn-pill btn-dark btn-wide"
+   href="lightning:minutespy352@walletofsatoshi.com">Subscribe with USDC</a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
    href="https://billing.stripe.com/p/login/bJefZi3fB4ICalL1de2Ji00">Manage My Subscription</a>
