--- a/index.html
+++ b/index.html
@@ -96,7 +96,22 @@
   <div class="cards-row" tabindex="0">
     <!-- Card 1 -->
     <article class="card">
-      <a class="card-link" href="yoga.html">
+      <a class="card-link" href="yoga-inperson.html">
+        <!-- default image -->
+        <img class="card-img img-default" src="images/card-cta-default.jpg" alt="Calls to Action" loading="lazy">
+        <!-- hover/alt image -->
+        <img class="card-img img-hover"   src="images/card-cta-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-tag">new</div>
+        <div class="card-cta">
+          <span>Yoga Classes</span>
+        </div>
+      </a>
+    </article>
+
+<div class="cards-row" tabindex="0">
+    <!-- Card 1 -->
+    <article class="card">
+      <a class="card-link" href="yoga-ondemand.html">
         <!-- default image -->
         <img class="card-img img-default" src="images/card-cta-default.jpg" alt="Calls to Action" loading="lazy">
         <!-- hover/alt image -->
