--- a/login.html
+++ b/login.html
@@ -83,20 +83,20 @@
 <a class="btn btn-pill btn-dark btn-wide" 
    href="https://buy.stripe.com/9B6cN65nJ0smeC1aNO2Ji01">Subscribe Now | Annual Plan – $169.99/year</a>
 
-<!-- Lightning / Sats (choose one of these) -->
+<!-- Lightning / Sats -->
 <a class="btn btn-pill btn-dark btn-wide"
    href="lightning:minutespy352@walletofsatoshi.com">Subscribe with Bitcoin</a>
 
-<!-- Lightning / Sats (choose one of these) -->
+<!-- Tokens / USDC -->
 <a class="btn btn-pill btn-dark btn-wide"
-   href="lightning:minutespy352@walletofsatoshi.com">Subscribe with USDC</a>
+   href=""ethereum:0xA0b86991c6218b36c1d19d4a2e9eb0ce3606eb48/transfer?address=0xa25ddc3246cB0A3B2284eEBec3C497e1a92B87f0">Subscribe with USDC</a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
    href="https://billing.stripe.com/p/login/bJefZi3fB4ICalL1de2Ji00">Manage My Subscription</a>
 
   	<p class="plan-note">
-    	Change or cancel anytime. Practice, breathe, give back—1.5% of proceeds go to permanent carbon removal thanks to
-    	<a href="https://stripe.com/climate" target="_blank" rel="noopener">Stripe Climate</a>.
+    	Change or cancel anytime. Practice, breathe, give back—5% of proceeds go to curing genetic disease to
+    	<a href="https://www.genoma.institute" target="_blank" rel="noopener">the Genoma Institute</a>.
       </p> 
     </div>
   </div>
