--- a/index.html
+++ b/index.html
@@ -93,22 +93,6 @@
 <section class="cards container" aria-label="Featured links">
   <h2 class="visually-hidden">Explore</h2>
 
-  <div class="cards-row" tabindex="0">
-    <!-- Card 1 -->
-    <article class="card">
-      <a class="card-link" href="yoga-inperson.html">
-        <!-- default image -->
-        <img class="card-img img-default" src="images/card-cta-default.jpg" alt="Calls to Action" loading="lazy">
-        <!-- hover/alt image -->
-        <img class="card-img img-hover"   src="images/card-cta-hover.jpg"   alt="" aria-hidden="true">
-        <div class="card-tag">new</div>
-        <div class="card-cta">
-          <span>Yoga Classes</span>
-        </div>
-      </a>
-    </article>
-
-<div class="cards-row" tabindex="0">
     <!-- Card 1 -->
     <article class="card">
       <a class="card-link" href="yoga-ondemand.html">
@@ -118,12 +102,21 @@
         <img class="card-img img-hover"   src="images/card-cta-hover.jpg"   alt="" aria-hidden="true">
         <div class="card-tag">new</div>
         <div class="card-cta">
-          <span>Yoga Classes</span>
+          <span>Yoga On-Demand</span>
         </div>
       </a>
     </article>
 
     <!-- Card 2 -->
+    <article class="card">
+      <a class="card-link" href="yoga-inperson.html">
+        <img class="card-img img-default" src="images/card-inperson-default.jpg" alt="InPerson">
+        <img class="card-img img-hover"   src="images/card-inperson-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-cta"><span>Yoga In-Person</span></div>
+      </a>
+    </article>
+    
+    <!-- Card 3 -->
     <article class="card">
       <a class="card-link" href="wellness.html">
         <img class="card-img img-default" src="images/card-wellness-default.jpg" alt="Wellness">
@@ -132,7 +125,7 @@
       </a>
     </article>
 
-    <!-- Card 3 -->
+    <!-- Card 4 -->
     <article class="card">
       <a class="card-link" href="corporate.html">
         <img class="card-img img-default" src="images/card-corporate-default.jpg" alt="Corporate">
@@ -141,7 +134,7 @@
       </a>
     </article>
 
-    <!-- Card 4 -->
+    <!-- Card 5 -->
     <article class="card">
       <a class="card-link" href="https://available-tarsal-b72.notion.site/Journal-27e6b96c13218019b5f8f864afea4ba1">
         <img class="card-img img-default" src="images/card-journal-default.jpg" alt="Travel">
