--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
    href="https://billing.stripe.com/p/login/bJefZi3fB4ICalL1de2Ji00">Manage My Subscription</a>
 
   	<p class="plan-note">
-    	Change or cancel anytime. Practice, breathe, give back—5% of proceeds go to curing genetic disease to
+    	Change or cancel anytime. Practice, breathe, give back—5% of proceeds go to biomedical research committed to curing genetic disease at
     	<a href="https://www.genoma.institute" target="_blank" rel="noopener">the Genoma Institute</a>.
       </p> 
     </div>
