Fix cards on main page debug

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 <!-- =================== Feature Carousel =================== -->
 <section class="cards container" aria-label="Featured links">
   <h2 class="visually-hidden">Explore</h2>
+  <div class="carousel">
 
     <!-- Card 1 -->
     <article class="card">
