Add new photos test 2

--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -34,8 +34,8 @@
 
   <!-- Hero (image) -->
   <section class="hero hero--image" role="banner" aria-label="Hero">
-    <!-- Set your image at images/yoga-hero.jpg -->
-    <div class="hero-media" style="background-image:url('images/yoga-hero.jpg');" aria-hidden="true"></div>
+    <!-- Set your image at images/yoga-inperson.jpg -->
+    <div class="hero-media" style="background-image:url('images/yoga-inperson.jpg');" aria-hidden="true"></div>
     <div class="hero-overlay" aria-hidden="true"></div>
 
     <div class="hero-inner">
