--- a/yoga-ondemand.html
+++ b/yoga-ondemand.html
@@ -34,8 +34,8 @@
 
   <!-- Hero (image) -->
   <section class="hero hero--image" role="banner" aria-label="Hero">
-    <!-- Set your image at images/yoga-hero.jpg -->
-    <div class="hero-media" style="background-image:url('images/yoga-hero.jpg');" aria-hidden="true"></div>
+    <!-- Set your image at images/yoga-ondemand.jpg -->
+    <div class="hero-media" style="background-image:url('images/yoga-ondemand.jpg');" aria-hidden="true"></div>
     <div class="hero-overlay" aria-hidden="true"></div>
 
     <div class="hero-inner">
@@ -58,7 +58,7 @@
   <section class="intro container">
     <h2>Find your flow here ✨</h2>
     <p>
-From energizing flows to restful resets, we’ve got you covered. Join our free in-person pop-ups, or unlock our full library of yoga and meditation with a premium subscription. Side effects may include strength, flexibility, and joy.
+From energizing flows to restful resets, we’ve got you covered. Join our free in-person pop-ups, or unlock our full library of yoga and meditation classes with a premium subscription. 
     </p>
   </section>
 
@@ -108,8 +108,7 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
       </a>
       <div class="meta">
         <h3>Lift</h3>
-        <p>Energize your body with sculpt, pilates-infused, and strength-based flows
-        designed to leave you feeling strong, focused, and ready to take on your day.</p>
+        <p>Energize your body with sculpt, pilates-infused, and strength-based flows.</p>
         <a href="lift.html"
            class="btn btn-pill btn-dark">Lift, tone, & sculpt</a>
       </div>
@@ -123,7 +122,7 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
       <div class="meta">
         <h3>Lull</h3>
         <p>Slow down and reset with restorative flows, yin practices, and meditations
-        to calm your nervous system and bring peace to your mind and body.</p>
+        to calm your nerves.</p>
         <a href="lull.html"
            class="btn btn-pill btn-dark">Regulate Nerves</a>
       </div>
@@ -136,8 +135,7 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
       </a>
       <div class="meta">
         <h3>Level-Up</h3>
-        <p>Glow from the inside out with cardio-based workouts like running, cycling, jump rope, and kickboxing
-        to complement your practice and strength-building exercises.</p>
+        <p>Glow from the inside out with cardio-based workouts to complement your practice.</p>
         <a href="levelup.html"
            class="btn btn-pill btn-dark">Level Up Your Practice</a>
       </div>
