Fix buttons on yoga pages

--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -45,7 +45,7 @@
       </h1>
   <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
-<a class="btn btn-outline-light btn-pill btn-wide"
+<a class="btn btn-dark btn-pill btn-wide"
    href="https://join.slack.com/t/yogawithlisa/shared_invite/zt-3ftkru3hx-wlWSt1RYzyfNVIt0LK1HXA"
    target="_blank" rel="noopener">
    JOIN OUR SLACK COMMUNITY
