Add new photos test 5

--- a/yoga-ondemand.html
+++ b/yoga-ondemand.html
@@ -109,7 +109,7 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
       <div class="meta">
         <h3>Lift</h3>
         <p>Energize your body with sculpt, pilates-infused, and strength-based flows.</p>
-        <a href="lift.html"
+        <a href="login.html"
            class="btn btn-pill btn-dark">Lift, tone, & sculpt</a>
       </div>
     </article>
@@ -123,7 +123,7 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
         <h3>Lull</h3>
         <p>Slow down and reset with restorative flows, yin practices, and meditations
         to calm your nerves.</p>
-        <a href="lull.html"
+        <a href="login.html"
            class="btn btn-pill btn-dark">Regulate Nerves</a>
       </div>
     </article>
@@ -136,7 +136,7 @@ From energizing flows to restful resets, we’ve got you covered. Join our free 
       <div class="meta">
         <h3>Level-Up</h3>
         <p>Glow from the inside out with cardio-based workouts to complement your practice.</p>
-        <a href="levelup.html"
+        <a href="login.html"
            class="btn btn-pill btn-dark">Level Up Your Practice</a>
       </div>
     </article>
