--- a/wellness.html
+++ b/wellness.html
@@ -103,8 +103,7 @@ From glowing skin to nourishing meals to becoming financially free, our wellness
       </a>
       <div class="meta">
         <h3>Lustre</h3>
-        <p>Glow from the inside out with skincare, haircare, and self-care practices designed to bring
-           radiance and confidence to your daily routine.</p>
+        <p>Glow from the inside out with our skincare, haircare, and self-care tips.</p>
         <a href="https://available-tarsal-b72.notion.site/Lustre-27d6b96c13218032b618d4b93ef4ea85"
            class="btn btn-pill btn-dark">Glow-Up</a>
       </div>
@@ -117,8 +116,7 @@ From glowing skin to nourishing meals to becoming financially free, our wellness
       </a>
       <div class="meta">
         <h3>Lean</h3>
-        <p>Nourish your body with balanced, plant-forward recipes, mindful eating tips, and nutrition
-           strategies to fuel energy and long-term health.</p>
+        <p>Nourish your body with balanced and mindful eating tips for long-term health.</p>
         <a href="https://available-tarsal-b72.notion.site/Lean-27e6b96c13218090aeacdb3db064eca7"
            class="btn btn-pill btn-dark">Eat Lean</a>
       </div>
@@ -131,8 +129,7 @@ From glowing skin to nourishing meals to becoming financially free, our wellness
       </a>
       <div class="meta">
         <h3>Legacy</h3>
-        <p>Build a strong money mindset with budgeting tools, savings hacks, and investing basics
-           to create financial freedom and security for the future.</p>
+        <p>Build a strong money mindset and build your legacy.</p>
         <a href="https://available-tarsal-b72.notion.site/Legacy-27e6b96c132180788beef9b2f1f4b0b8?pvs=74"
            class="btn btn-pill btn-dark">Grow Your Legacy</a>
       </div>
