--- a/login.html
+++ b/login.html
@@ -89,7 +89,10 @@
 
 <!-- Tokens / USDC -->
 <a class="btn btn-pill btn-dark btn-wide"
-   href=""ethereum:0xA0b86991c6218b36c1d19d4a2e9eb0ce3606eb48/transfer?address=0xa25ddc3246cB0A3B2284eEBec3C497e1a92B87f0">Subscribe with USDC</a>
+   href="images/USDC.jpg"
+   target="_blank" rel="noopener noreferrer">
+   Subscribe with USDC
+</a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
    href="https://billing.stripe.com/p/login/bJefZi3fB4ICalL1de2Ji00">Manage My Subscription</a>
