Yoga In Person Message

--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -40,8 +40,8 @@
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">Yoga <em>every</em> way.</span><br/>
-  	Yoga <em>every</em> day.  
+  	<span class="nowrap">Meet me on the <em>mat</em>.</span><br/>
+  	Let's reach our goals <em>together</em>.  
       </h1>
   <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
