Crypto QR codes and button updates

--- a/login.html
+++ b/login.html
@@ -83,15 +83,11 @@
 <a class="btn btn-pill btn-dark btn-wide" 
    href="https://buy.stripe.com/9B6cN65nJ0smeC1aNO2Ji01">Subscribe Now | Annual Plan – $169.99/year</a>
 
-<!-- Lightning / Sats -->
+<!-- Tokens / Crypto -->
 <a class="btn btn-pill btn-dark btn-wide"
-   href="lightning:minutespy352@walletofsatoshi.com">Subscribe with Bitcoin</a>
-
-<!-- Tokens / USDC -->
-<a class="btn btn-pill btn-dark btn-wide"
-   href="images/USDC.jpg"
+   href="images/crypto.jpg"
    target="_blank" rel="noopener noreferrer">
-   Subscribe with USDC
+   Subscribe with Crypto
 </a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
