Add Wellness page

--- a/index.html
+++ b/index.html
@@ -167,10 +167,7 @@
       + Full access to meditation & mindfulness series. 
     </p>
     <p>
-      + Full access to heart-healthy and gluten free recipes & meal plans. 
-    </p>
-    <p>
-      + Read more about our <strong>Corporate Wellness Program</strong> here! 
+      + Full access to heart-healthy and gluten free meal plans. 
     </p>
     <p>
       <strong>Monthly pricing: $16.99 USD | Yearly pricing $169.99</strong><em>(2 Months Free!)</em>  
@@ -183,7 +180,7 @@
 <section class="ig card" aria-label="Instagram">
   <div class="ig-head">
     <h3>you + lisa</h3>
-    <a class="btn btn-pill btn-outline" href="https://instagram.com/lisaeshunwilson" target="_blank" rel="noopener">
+    <a class="btn btn-pill btn-outline" href="https://instagram.com/yogawithlisa.ai/" target="_blank" rel="noopener">
       FIND US ON SOCIAL
     </a>
   </div>
