Add Privacy Page on the Login

--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
 
   	<p class="plan-note">
     	Change or cancel anytime. Practice, breathe, give back—5% of proceeds go to biomedical research committed to curing genetic disease at
-    	<a href="https://www.genoma.institute" target="_blank" rel="noopener">the Genoma Institute</a>.
+    	<a href="https://www.genoma.institute" target="_blank" rel="noopener">the Genoma Institute</a>. Visit our privc
       </p> 
     </div>
   </div>
@@ -123,7 +123,7 @@
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="y"></span>, YOGA WITH LISA BY LISA ESHUN-WILSON &amp; ASSOCIATES, LLC / ALL RIGHTS RESERVED</p>
+      <p>© <span id="y"></span>, YOGA WITH LISA BY LISA ESHUN-WILSON &amp; ASSOCIATES, LLC / <a href=privacy.html>ALL RIGHTS RESERVED</a></p>
     </div>
   </footer>
 
