--- a/privacy.html
+++ b/privacy.html
@@ -90,40 +90,18 @@
   <h2 class="visually-hidden">Explore</h2>
 <div class="in-person-classes-head">
      <h2 style="text-align:center; font-family:'Playfair Display', serif; font-size:2.2rem; margin-bottom:40px;">
-    Join us live!
+    Privacy Policy
   </h2>
-    <p class="sub">From sunny vinyasa flows to grounding yin resets, our in-person pop-ups are designed to lift your body and your mood. Bring a friend, find your flow, and leave glowing.  
+    <p class="sub">
+Yoga with Lisa, LLC values your privacy. We do not sell or share personal data with third parties.
+Any information collected through our website, app, or social media integrations (such as Instagram or Facebook) is used solely to improve user experience and provide yoga-related services.
+
+You may contact us at lisa@yogawithlisa.ai to request access to, modification of, or deletion of your personal data.
+
+Last updated: November 2025
+  
 </p>
   </div>
-
-  <div class="cards-row" tabindex="0">
-
-    <!-- Card 1 -->
-    <article class="card">
-      <a class="card-link" href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?">
-        <img class="card-img img-default" src="images/oct18-greenyogi-flyer-default.jpg" alt="Pop Up">
-        <img class="card-img img-hover"   src="images/oct18-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
-      </a>
-    </article>
-
-    <!-- Card 2 -->
-    <article class="card">
-      <a class="card-link" href="https://partiful.com/e/KKvYNm7SQLW4SXslqEhJ">
-        <img class="card-img img-default" src="images/sept19-greenyogi-flyer-default.jpg" alt="Pop Up">
-        <img class="card-img img-hover"   src="images/sept19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
-      </a>
-    </article>
-
-    <!-- Card 3 -->
-    <article class="card">
-      <a class="card-link" href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?">
-        <img class="card-img img-default" src="images/aug19-greenyogi-flyer-default.jpg" alt="Pop Up">
-        <img class="card-img img-hover"   src="images/aug19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
-      </a>
-    </article>
-</div>
-</section>
- 
 
 <footer class="site-footer">
     <div class="container">
